# src/models/swagger/params_model.js
@@ -5,6 +5,31 @@ export default {
     in: "query",
     description: "ค่าที่ต้องการ search",
   },
+  sort_field: {
+    name: "sort_field",
+    schema: {
+      type: "array",
+      items: {
+        type: "string",
+        required: true,
+      },
+    },
+    in: "query",
+    description: "ชื่อ field ที่ต้องการ sort (รองรับทุก field)",
+  },
+  sort_order: {
+    name: "sort_order",
+    schema: {
+      type: "array",
+      items: {
+        type: "integer",
+        required: true,
+      },
+    },
+    in: "query",
+    description:
+      "1 น้อยไปมาก, -1 มากไปน้อย (รองรับทุก field เป็น stable sort จำนวนที่ใส่ต้องตรงกับจำนวน sort_field)",
+  },
   page: {
     name: "page",
     type: "integer",
